--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "matplotlib>=3.8.4",
     "plotly>=5.22.0",
     "scikit-learn>=1.4.2",
+    "streamlit-echarts>=0.4.0",
 ]
 requires-python = "==3.10.*"
 readme = "README.md"
