--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "scikit-learn>=1.4.2",
     "streamlit-echarts>=0.4.0",
 ]
-requires-python = "==3.10.*"
+requires-python = "==3.10.12"
 readme = "README.md"
 license = {text = "MIT"}
 
